--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ install_requires =
     numpy
     astropy
     pybind11
-    matplotlib==3.2.2
+    #matplotlib==3.2.2
     scipy
     regions<=0.5
 
